--- a/translations/fr.xlf
+++ b/translations/fr.xlf
@@ -162,9 +162,13 @@
         <source>Unlink instance</source>
         <target>Délier les instances</target>
       </trans-unit>
-      <trans-unit id="40">
+      <trans-unit id="41">
           <source>Remove all references (products, orders and customers)</source>
           <target>Supprimer toutes les références (produits, commandes et clients)</target>
+      </trans-unit>
+      <trans-unit id="42">
+          <source>I don't have an instance yet!</source>
+          <target>Je n'ai pas encore d'instance !</target>
       </trans-unit>
     </body>
   </file>
